Fixed Header Alignment

--- a/css/layout.css
+++ b/css/layout.css
@@ -27,6 +27,10 @@ a {
 li {
 	float: left;
 }
+li.header {
+	padding-top: 12px;
+	padding-left: 24px;
+}
 a.navbar {
 	background-color: #101010;
 	color: #BBBBBB;
